@@ -1,3 +1,11 @@
+2010-12-10  Iain Sandoe  <iains@gcc.gnu.org>
+
+	* powerpc_darwin_mach_dep.s:  Update for m64.  Add eh frames.
+	Do not build or use the picsymbol stub for Darwin >= 9.
+	* tests/test.c (reverse_test):  Modify count for ppc64-darwin.
+	* pthread_support.c (GC_get_thread_stack_base): Correct a debug
+	statement.
+
 2010-11-29  Iain Sandoe  <iains@gcc.gnu.org>
 	    Mike Stump  <mrs@gcc.gnu.org>
 
